--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # This is the default format.
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /:categories/:title.html # year can be used for ordering
-description: 'Simple Page of Blocks'
+description: 'Welcome to the Bay Area Rationalist Community'
 year : 2024
 
 exclude: [".rvmrc", ".rbenv-version", "ReadMe.md", "Rakefile", "changelog.md", "License.md"]
